<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuAiAssistant"
        android:icon="@drawable/ic_auto_mode_24"
        android:title="@string/menu_ai"/>

    <item
        android:id="@+id/menuStatistics"
        android:icon="@drawable/ic_analytics_24"
        android:title="@string/menu_statistics"/>

    <item
        android:id="@+id/menuHistory"
        android:icon="@drawable/ic_history_24"
        android:title="@string/menu_watering_history"/>

    <item
        android:id="@+id/menuHealth"
        android:icon="@drawable/ic_device_health_24"
        android:title="@string/menu_device_health"/>

    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/menu_settings"/>

    <item
        android:id="@+id/menuAbout"
        android:icon="@drawable/ic_info_24"
        android:title="@string/menu_about"/>

</menu>