<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AVORA.BackButton"
        android:id="@+id/btnBack"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/back_to_main" />
    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="vertical">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:includeFontPadding="false" android:text="@string/ai_assistant_title" android:textAppearance="@style/TextAppearance.AVORA.ScreenTitle" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:text="@string/ai_assistant_subtitle" android:textAppearance="@style/TextAppearance.AVORA.Body" />
    </LinearLayout>
</LinearLayout>